--- a/ibus/ibus-keymagic.spec.in
+++ b/ibus/ibus-keymagic.spec.in
@@ -4,8 +4,8 @@ Release:    1%{?dist}
 Summary:    IBus KeyMagic project
 License:    GPLv2+
 Group:      System Environment/Libraries
-URL:        http://code.google.com/p/ibus/
-Source0:    http://ibus.googlecode.com/files/%{name}-%{version}.tar.gz
+URL:        http://code.google.com/p/keymagic/
+Source0:    http://keymagic.googlecode.com/files/%{name}-%{version}.tar.gz
 
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
@@ -34,8 +34,6 @@ rm -rf $RPM_BUILD_ROOT
 %files -f %{name}.lang
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING README
-# %dir %{python_sitearch}/ibus
-# %{python_sitearch}/ibus/*
 %dir %{_datadir}/ibus-keymagic
 %{_datadir}/ibus-keymagic
 %{_bindir}/ibus-engine-keymagic
