now ibus-keymagic should be compile-able

--- a/ibus/src/keymagic.xml.in.in
+++ b/ibus/src/keymagic.xml.in.in
@@ -12,7 +12,7 @@
 	<observed-paths>
 		<path>~/.keymagic</path>
 	</observed-paths>
-	<engines exec="${libexecdir}/ibus-engine-keymagic --xml" />
+	<engines exec=\"${libexecdir}/ibus-engine-keymagic --xml\" />
 
 	<!--engines>
 		<engine>
