added /usr/shared/keymagic as layout folder.

--- a/ibus/src/keymagic.xml.in.in
+++ b/ibus/src/keymagic.xml.in.in
@@ -11,6 +11,7 @@
 	<textdomain>ibus-keymagic</textdomain>
 	<observed-paths>
 		<path>~/.keymagic</path>
+		<path>/usr/share/keymagic</path>
 	</observed-paths>
 	<engines exec=\"${libexecdir}/ibus-engine-keymagic --xml\" />
 
