--- a/windows/Editor/kEditor/kEditor.csproj
+++ b/windows/Editor/kEditor/kEditor.csproj
@@ -104,15 +104,19 @@
     <Compile Include="UnicodeData.cs" />
     <EmbeddedResource Include="aboutForm.resx">
       <DependentUpon>aboutForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ConfigColor.resx">
       <DependentUpon>ConfigColor.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GlypeTable.resx">
       <DependentUpon>GlypeTable.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="glyphRangeForm.resx">
       <DependentUpon>glyphRangeForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
