KeyMagicNet is now work fine on 64bit system for both 32/64bit apps.

--- a/windows/Editor/kEditor/Properties/Settings.settings
+++ b/windows/Editor/kEditor/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="HexNotation" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DoNotAskForAdmin" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
