--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -64,6 +64,9 @@
       <setting name="HexNotation" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="DoNotAskForAdmin" serializeAs="String">
+        <value>False</value>
+      </setting>
     </kEditor.Properties.Settings>
   </userSettings>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
