--- a/windows/Editor/kEditor/kEditor.csproj
+++ b/windows/Editor/kEditor/kEditor.csproj
@@ -55,6 +55,14 @@
     <ApplicationIcon>KeyScript.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="libkeymagic.net, Version=1.0.4171.28463, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\cross-platform\libkeymagic\libkeymagic.net\Debug\libkeymagic.net.dll</HintPath>
+    </Reference>
+    <Reference Include="MessageBoxExLib, Version=1.0.4171.33915, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\MessageBoxExLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -68,6 +76,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="ScintillaNet, Version=2.2.3581.19319, Culture=neutral, PublicKeyToken=948d6c9751444115">
       <HintPath>ScintillaNet.dll</HintPath>
+    </Reference>
+    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.5.0.15095, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +95,8 @@
     <Compile Include="ConfigColor.Designer.cs">
       <DependentUpon>ConfigColor.cs</DependentUpon>
     </Compile>
+    <Compile Include="DockableDocument.cs" />
+    <Compile Include="Document.cs" />
     <Compile Include="FilterEditBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -107,6 +121,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Styler.cs" />
+    <Compile Include="Tester.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tester.Designer.cs">
+      <DependentUpon>Tester.cs</DependentUpon>
+    </Compile>
     <Compile Include="UnicodeData.cs" />
     <EmbeddedResource Include="aboutForm.resx">
       <DependentUpon>aboutForm.cs</DependentUpon>
@@ -170,6 +190,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="KeyScript.ico" />
+    <EmbeddedResource Include="Tester.resx">
+      <DependentUpon>Tester.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Logo.png" />
