--- a/cross-platform/libkeymagic/libkeymagic.net/libkeymagic.net.vcproj
+++ b/cross-platform/libkeymagic/libkeymagic.net/libkeymagic.net.vcproj
@@ -6,7 +6,7 @@
 	ProjectGUID="{A2331F2A-2575-4868-A771-DA566A05A341}"
 	RootNamespace="libkeymagicnet"
 	Keyword="ManagedCProj"
-	TargetFrameworkVersion="196613"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\vs\bin\libkeymagic.dbg.x32.lib $(NOINHERIT)"
+				AdditionalDependencies="..\vs\bin\libkeymagic.x32.lib $(NOINHERIT)"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -116,7 +116,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\"
 				PreprocessorDefinitions="WIN32;NDEBUG"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
