--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -19,7 +19,7 @@
       <setting name="DefaultFontSize" serializeAs="String">
         <value>10</value>
       </setting>
-      <setting name="forceDefaultEditor" serializeAs="String">
+      <setting name="ForceDefaultEditor" serializeAs="String">
         <value>True</value>
       </setting>
       <setting name="StyleConfig" serializeAs="String">
