--- a/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
+++ b/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="RunAtStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="TurnOffHotkey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="LastKeyboardLayoutIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
