--- a/windows/KeyMagic.NET/KeyMagic.NET/app.config
+++ b/windows/KeyMagic.NET/KeyMagic.NET/app.config
@@ -22,6 +22,12 @@
             <setting name="RunAtStartup" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="TurnOffHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastKeyboardLayoutIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
         </KeyMagic.Properties.Settings>
     </userSettings>
 </configuration>
