--- a/windows/Editor/kEditor/kEditor.csproj
+++ b/windows/Editor/kEditor/kEditor.csproj
@@ -55,9 +55,9 @@
     <ApplicationIcon>KeyScript.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libkeymagic.net, Version=1.0.4171.28463, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="KeyMagicDotNet, Version=1.0.4174.2103, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\cross-platform\libkeymagic\libkeymagic.net\Debug\libkeymagic.net.dll</HintPath>
+      <HintPath>.\KeyMagicDotNet.dll</HintPath>
     </Reference>
     <Reference Include="MessageBoxExLib, Version=1.0.4171.33915, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -121,11 +121,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Styler.cs" />
-    <Compile Include="Tester.cs">
+    <Compile Include="TesterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tester.Designer.cs">
-      <DependentUpon>Tester.cs</DependentUpon>
+    <Compile Include="TesterForm.Designer.cs">
+      <DependentUpon>TesterForm.cs</DependentUpon>
     </Compile>
     <Compile Include="UnicodeData.cs" />
     <EmbeddedResource Include="aboutForm.resx">
@@ -190,8 +190,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="KeyScript.ico" />
-    <EmbeddedResource Include="Tester.resx">
-      <DependentUpon>Tester.cs</DependentUpon>
+    <EmbeddedResource Include="TesterForm.resx">
+      <DependentUpon>TesterForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
@@ -202,9 +202,6 @@
     <Content Include="UnicodeData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
