--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -7,9 +7,6 @@
   </configSections>
   <userSettings>
     <kEditor.Properties.Settings>
-      <setting name="LastFilePath" serializeAs="String">
-        <value />
-      </setting>
       <setting name="RecentFiles" serializeAs="String">
         <value />
       </setting>
@@ -66,6 +63,9 @@
       </setting>
       <setting name="DoNotAskForAdmin" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="LastTabs" serializeAs="String">
+        <value />
       </setting>
     </kEditor.Properties.Settings>
   </userSettings>
