--- a/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
+++ b/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
@@ -14,13 +14,13 @@
     <Setting Name="colFileNameWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">80</Value>
     </Setting>
-    <Setting Name="RunAtStartup" Type="System.Boolean" Scope="User">
+    <Setting Name="RunAtStartup" Provider="KeyMagic.PortableSettingsProvider" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="TurnOffHotkey" Type="System.String" Scope="User">
+    <Setting Name="TurnOffHotkey" Provider="KeyMagic.PortableSettingsProvider" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="LastKeyboardLayoutIndex" Type="System.Int32" Scope="User">
+    <Setting Name="LastKeyboardLayoutIndex" Provider="KeyMagic.PortableSettingsProvider" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
