KeyMagic .NET almost ready to release

--- a/windows/Editor/kEditor/Properties/Settings.settings
+++ b/windows/Editor/kEditor/Properties/Settings.settings
@@ -54,7 +54,7 @@
       <Value Profile="(Default)">Myanmar</Value>
     </Setting>
     <Setting Name="HexNotation" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="DoNotAskForAdmin" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
