--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -59,7 +59,7 @@
         <value>Myanmar</value>
       </setting>
       <setting name="HexNotation" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DoNotAskForAdmin" serializeAs="String">
         <value>False</value>
