--- a/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
+++ b/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
@@ -2,26 +2,38 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="KeyMagic.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="colHotkeyWidth" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">80</Value>
+    <Setting Name="ColHotkeyWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
     </Setting>
-    <Setting Name="colDescWidth" Type="System.Int32" Scope="User">
+    <Setting Name="ColDescWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">300</Value>
     </Setting>
-    <Setting Name="colDisplayWidth" Type="System.Int32" Scope="User">
+    <Setting Name="ColDisplayWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">80</Value>
     </Setting>
-    <Setting Name="colFileNameWidth" Type="System.Int32" Scope="User">
+    <Setting Name="ColFileNameWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">80</Value>
     </Setting>
     <Setting Name="RunAtStartup" Provider="KeyMagic.PortableSettingsProvider" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="TurnOffHotkey" Provider="KeyMagic.PortableSettingsProvider" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">CTRL+Space</Value>
     </Setting>
     <Setting Name="LastKeyboardLayoutIndex" Provider="KeyMagic.PortableSettingsProvider" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="BetaRelease" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ColVersionWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">55</Value>
+    </Setting>
+    <Setting Name="SoftKeyboardSize" Provider="KeyMagic.PortableSettingsProvider" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">620, 260</Value>
+    </Setting>
+    <Setting Name="SoftKeyboardHotkey" Provider="KeyMagic.PortableSettingsProvider" Type="System.String" Scope="User">
+      <Value Profile="(Default)">F10</Value>
     </Setting>
   </Settings>
 </SettingsFile>
