--- a/windows/KeyMagic.NET/KeyMagic.NET/app.config
+++ b/windows/KeyMagic.NET/KeyMagic.NET/app.config
@@ -4,30 +4,49 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="KeyMagic.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="KeyMagic.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <KeyMagic.Properties.Settings>
-            <setting name="colHotkeyWidth" serializeAs="String">
-                <value>80</value>
+            <setting name="ColHotkeyWidth" serializeAs="String">
+                <value>10</value>
             </setting>
-            <setting name="colDescWidth" serializeAs="String">
+            <setting name="ColDescWidth" serializeAs="String">
                 <value>300</value>
             </setting>
-            <setting name="colDisplayWidth" serializeAs="String">
+            <setting name="ColDisplayWidth" serializeAs="String">
                 <value>80</value>
             </setting>
-            <setting name="colFileNameWidth" serializeAs="String">
+            <setting name="ColFileNameWidth" serializeAs="String">
                 <value>80</value>
             </setting>
             <setting name="RunAtStartup" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="TurnOffHotkey" serializeAs="String">
-                <value />
+                <value>CTRL+Space</value>
             </setting>
             <setting name="LastKeyboardLayoutIndex" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="ColVersionWidth" serializeAs="String">
+                <value>55</value>
+            </setting>
+            <setting name="SoftKeyboardSize" serializeAs="String">
+                <value>620, 260</value>
+            </setting>
+            <setting name="SoftKeyboardHotkey" serializeAs="String">
+                <value>F10</value>
+            </setting>
         </KeyMagic.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <KeyMagic.Properties.Settings>
+            <setting name="BetaRelease" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </KeyMagic.Properties.Settings>
+    </applicationSettings>
 </configuration>
