--- a/windows/KeyMagic.NET/KeyMagic.NET/app.config
+++ b/windows/KeyMagic.NET/KeyMagic.NET/app.config
@@ -11,7 +11,7 @@
     <userSettings>
         <KeyMagic.Properties.Settings>
             <setting name="ColHotkeyWidth" serializeAs="String">
-                <value>10</value>
+                <value>80</value>
             </setting>
             <setting name="ColDescWidth" serializeAs="String">
                 <value>300</value>
@@ -26,7 +26,7 @@
                 <value>True</value>
             </setting>
             <setting name="TurnOffHotkey" serializeAs="String">
-                <value>CTRL+Space</value>
+                <value>Ctrl+Space</value>
             </setting>
             <setting name="LastKeyboardLayoutIndex" serializeAs="String">
                 <value>0</value>
@@ -40,12 +40,21 @@
             <setting name="SoftKeyboardHotkey" serializeAs="String">
                 <value>F10</value>
             </setting>
+            <setting name="FirstRun" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UserInfoReported" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LastCheckUpdateDate" serializeAs="String">
+                <value>2011-09-01</value>
+            </setting>
         </KeyMagic.Properties.Settings>
     </userSettings>
     <applicationSettings>
         <KeyMagic.Properties.Settings>
             <setting name="BetaRelease" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </KeyMagic.Properties.Settings>
     </applicationSettings>
