--- a/windows/KeyMagic.NET/HookInput/HookInput.vcproj
+++ b/windows/KeyMagic.NET/HookInput/HookInput.vcproj
@@ -268,7 +268,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(SolutionDir\bin"
+			OutputDirectory="$(SolutionDir)\bin"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			UseOfMFC="2"
