--- a/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
+++ b/windows/KeyMagic.NET/KeyMagic.NET/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ColHotkeyWidth" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">10</Value>
+      <Value Profile="(Default)">80</Value>
     </Setting>
     <Setting Name="ColDescWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">300</Value>
@@ -18,13 +18,13 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="TurnOffHotkey" Provider="KeyMagic.PortableSettingsProvider" Type="System.String" Scope="User">
-      <Value Profile="(Default)">CTRL+Space</Value>
+      <Value Profile="(Default)">Ctrl+Space</Value>
     </Setting>
     <Setting Name="LastKeyboardLayoutIndex" Provider="KeyMagic.PortableSettingsProvider" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="BetaRelease" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ColVersionWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">55</Value>
@@ -34,6 +34,15 @@
     </Setting>
     <Setting Name="SoftKeyboardHotkey" Provider="KeyMagic.PortableSettingsProvider" Type="System.String" Scope="User">
       <Value Profile="(Default)">F10</Value>
+    </Setting>
+    <Setting Name="FirstRun" Provider="KeyMagic.PortableSettingsProvider" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="UserInfoReported" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="LastCheckUpdateDate" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">2011-09-01</Value>
     </Setting>
   </Settings>
 </SettingsFile>
