why these files were left. committed again.

--- a/ibus/ibus-keymagic.spec.in
+++ b/ibus/ibus-keymagic.spec.in
@@ -18,7 +18,7 @@ IBus KeyMagic project.
 %setup -q
 
 %build
-%configure --disable-static
+%configure
 # make -C po update-gmo
 make %{?_smp_mflags}
 
