--- a/ibus/src/Makefile.am
+++ b/ibus/src/Makefile.am
@@ -31,8 +31,12 @@ ibus_engine_keymagic_SOURCES = \
 	KeyMagicString.cpp \
 	KeyMagicKeyboard.h \
 	KeyMagicKeyboard.cpp \
+	LogFileWriter.h \
+	LogFileWriter.cpp \
 	KeyMagicLogger.h \
 	KeyMagicLogger.cpp \
+	KeyMagicErrorLogger.h \
+	KeyMagicErrorLogger.cpp \
 	RuleInfo.h \
 	RuleInfo.cpp \
 	KeyCodes.h \
