may be 1.5.2. change the way we get keyboard state for safety

--- a/windows/KeyMagic.NET/KeyMagic.NET/KeyMagic.NET.csproj
+++ b/windows/KeyMagic.NET/KeyMagic.NET/KeyMagic.NET.csproj
@@ -24,7 +24,7 @@
     <GenerateManifests>false</GenerateManifests>
     <TargetZone>LocalIntranet</TargetZone>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
     <PublishUrl>c:\publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
